BaSP-W04-2023: overflow from membership section fixed

--- a/Week-04/CSS/main.css
+++ b/Week-04/CSS/main.css
@@ -274,7 +274,7 @@ nav ul {
         font-size: 5rem;
     }
     #memberships-container li{
-        height: 60vh;
+        height: 65vh;
     }
     .basic-membership{
         background-image: linear-gradient(#8b7c7c66, #8b7c7c66),url(../../assets/images/landing-only-classes-membership-background.png);
